# crc-bench

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
bench/: CMakeLists.txt  basic.cpp  ccitt.cpp
results/: bm_results_ccitt.csv
